--- a/4-Lab_MediaQuery/4/style.css
+++ b/4-Lab_MediaQuery/4/style.css
@@ -1,3 +1,7 @@
+main {
+  display: flex;
+  gap: 14px;
+}
 @media screen and (min-width: 0px) and (max-width: 768px) {
   button {
     display: block;
@@ -43,14 +47,6 @@
     text-align: justify;
   }
 
-  .info {
-    margin: 10px;
-    padding: 20px;
-  }
-
-  main {
-    display: flex;
-  }
 }
 
 @media screen and (min-width: 1280px) and (max-width: 3000px) {
@@ -71,12 +67,4 @@
     text-align: justify;
   }
 
-  .info {
-    margin: 10px;
-    padding: 20px;
-  }
-
-  main {
-    display: flex;
-  }
 }
